# LinMic

./: .gitignore  LICENSE  README.md
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/org/linmic/app/audio/: AudioConstants.kt  MicrophoneCapture.kt
android-app/app/src/main/java/org/linmic/app/service/: MicrophoneService.kt
android-app/app/src/main/java/org/linmic/app/ui/: MainActivity.kt
android-app/app/src/main/java/org/linmic/app/usb/: AdbAudioServer.kt  FrameProtocol.kt
android-app/app/src/main/res/values/: styles.xml
docs/: architecture.md  build.md  gui-mockup.md  protocol.md
linux-client/: .gitignore  README.md  pyproject.toml
linux-client/src/linmic/: __main__.py  config.py
linux-client/src/linmic/audio/: dsp.py  pipewire.py  types.py
linux-client/src/linmic/services/: session.py
linux-client/src/linmic/transport/: base.py  usb_adb.py
linux-client/src/linmic/ui/: app.py
linux-client/src/linmic/utils/: logging.py
linux-client/tests/: test_config.py
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  install  rules
packaging/linux/: org.linmic.LinMic.desktop
scripts/: dev-linux.sh
